[tool.poetry]
name = "repl-nix-critical-axial-load-ecuation"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_critical_axial_load_ecuation"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.7.4"
fastapi = "^0.111.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
